Updates to Chapter 5 (50% done)

--- a/templates/appa.tex
+++ b/templates/appa.tex
@@ -1,6 +1,6 @@
 \chapter{Exploration Data Layers}\label{app:A_data_layers}
 
-This appendix steps through each of the data layers (or ``features'') used as predictor and response variables for the machine learning approach to exploration risk mitigation described in Chapters \ref{ch3:expl_ml_prep} and \ref{ch5:expl_ml}. For each feature, the source of the data, specific conditioning steps applied to the data, and an image of the final feature map are provided. Refer to Chapter \ref{ch3:expl_ml_prep} for details on methods and routines mentioned by name in the descriptions below.
+This appendix steps through each of the data layers (or ``features'') used as predictor and response variables for the machine learning approach to exploration risk mitigation described in Chapters \ref{ch3:expl_ml_prep} and \ref{ch5:ml_results}. For each feature, the source of the data, specific conditioning steps applied to the data, and an image of the final feature map are provided. Refer to Chapter \ref{ch3:expl_ml_prep} for details on methods and routines mentioned by name in the descriptions below.
 \vfill
 \pagebreak
 
@@ -350,7 +350,7 @@ A pre-calculated grid for the water table gradient is among the layers included 
 \pagebreak
 
 \section{Geothermal Gradient}\label{app:dl_geothermal_gradient}
-The response variable for this analysis comes from observations stored in the SMU \textit{Heat Flow Database from \acrlong{bht} Data}, accessed via the SMU node of the \acrlong{ngds} \citep{smu_geothermal_2021}. This database focuses specifically on heat flow values derived using geothermal gradient and conductivity measurements from well data in journal articles, books, reports, and from other sources \citep{blackwell_geothermal_2014}. Geothermal gradient values are provided in two forms: reported gradient and corrected gradient. The latter reports the result of both temperature and terrain corrections based on the well depth interval that a measurement was taken. If a corrected geothermal gradient value existed, this value was used in this analysis, otherwise the regular geothermal gradient value was selected. The well data set was clipped to the bounds of the Regional Polygon, then loaded into Python for conditioning. Well records missing geographic coordinates or a geothermal gradient value of either type were dropped. The list was sorted on coordinates and gradient, and only the first record for each location (well) was kept. The sort was in descending order, so this method preserved the highest gradient value captured per well. The final set of 599 values shown in Figure \ref{fig:feat_geotherm_gradient} comprise the raw input data used for predictive modeling of geothermal gradient across the study AOI.
+The response variable for this analysis comes from observations stored in the SMU \textit{Heat Flow Database from Bottom Hole Temperature Data}, accessed via the SMU node of the \acrlong{ngds} \citep{smu_geothermal_2021}. This database focuses specifically on heat flow values derived using geothermal gradient and conductivity measurements from well data in journal articles, books, reports, and from other sources \citep{blackwell_geothermal_2014}. Geothermal gradient values are provided in two forms: reported gradient and corrected gradient. The latter reports the result of both temperature and terrain corrections based on the well depth interval that a measurement was taken. If a corrected geothermal gradient value existed, this value was used in this analysis, otherwise the regular geothermal gradient value was selected. The well data set was clipped to the bounds of the Regional Polygon, then loaded into Python for conditioning. Well records missing geographic coordinates or a geothermal gradient value of either type were dropped. The list was sorted on coordinates and gradient, and only the first record for each location (well) was kept. The sort was in descending order, so this method preserved the highest gradient value captured per well. The final set of 599 values shown in Figure \ref{fig:feat_geotherm_gradient} comprise the raw input data used for predictive modeling of geothermal gradient across the study AOI.
 \vfill
 \pagebreak
 
