--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -19,7 +19,7 @@ The \acrlong{eia} (\acrshort{eia}) publishes annual forecasts on U.S.\ energy ge
 \label{fig:eia_2021_projections}
 \end{figure}
 
-Lazard Asset Management breaks renewables down by \acrlong{lcoe} (\acrshort{lcoe}) in U.S.\ dollars/\acrshort{mwh}, where \acrshort{lcoe} is the estimated lifetime average net cost per unit energy of an electricity-generating plant. In their 2020 analysis, intermittent energy sources like wind and utility-scale solar are already cost-competitive with fossil fuel-derived sources (Figure \ref{fig:lazard_lcoe}) \citep{lazard_lazards_2020}. Geothermal, an “always on” source of power, ranges from \$59-\$101/\acrshort{mwh} LCOE, making it second-tier in cost-competitiveness but comparable to community and rooftop solar installations \citep{lazard_lazards_2020}. Overall, the transition away from fossil fuel super-dominance is in progress, and the demand for energy in support of population growth and country development will remain an industry driver over the next 30 years.
+Lazard Asset Management breaks renewables down by \acrlong{lcoe} (\acrshort{lcoe}) in U.S.\ dollars/MWh, where \acrshort{lcoe} is the estimated lifetime average net cost per unit energy of an electricity-generating plant. In their 2020 analysis, intermittent energy sources like wind and utility-scale solar are already cost-competitive with fossil fuel-derived sources (Figure \ref{fig:lazard_lcoe}) \citep{lazard_lazards_2020}. Geothermal, an “always on” source of power, ranges from \$59-\$101/MWh LCOE, making it second-tier in cost-competitiveness but comparable to community and rooftop solar installations \citep{lazard_lazards_2020}. Overall, the transition away from fossil fuel super-dominance is in progress, and the demand for energy in support of population growth and country development will remain an industry driver over the next 30 years.
  
 \begin{figure}[htp]
 \centering
@@ -37,8 +37,7 @@ Layered on top of these macroeconomic influences are unexpected events that have
 The 2015 Paris climate agreement set a target of $<2^\circ$C on the rise in global temperatures above the pre-industrial average (i.e., the period from 1850-1900) to prevent the most extreme impacts of climate change \citep{unfccc_paris_2015}. The more commonly-ascribed $1.5^\circ$C target may be unachievable given current trajectories, and international calls to action are focusing on reducing anthropogenic carbon dioxide emissions to ``net zero'' as quickly as possible \citep{ipcc_global_2018}. Greater public awareness and alignment with these targets puts pressure on the energy industry to revise their traditional business models. Beginning in 2020, top-tier oil and gas companies started issuing press releases outlining energy transition targets for 2025, 2030, 2050, and beyond \citep{bp_international_2020,chevron_chevron_2021,conocophillips_conocophillips_2020,equinor_equinor_2020,exxonmobil_exxonmobil_2021,shell_responsible_2020,shell_shell_2021,total_total_2020,total_2020_2021}. The proposed strategies vary but generally focus on (i) reducing company stake in fossil-fuel exploration and production activities, (ii) setting a net-zero target applicable to emissions from operations, product carbon intensity, and carbon offsets, and (iii) dedicating investments in low- and no-carbon energy alternatives to replace hydrocarbons. Nevertheless, pressure to do more, faster reached a new peak in May 2021 when a court decision in The Netherlands and shareholder votes for two U.S.\ majors demanded an accelerated push toward emissions reductions and low-carbon energy options \citep{mcwilliams_investors_2021}.
 
 \section{Geothermal Energy}\label{ch1:geothermal}
-Several factors must be met for an energy source to be considered a viable and sustainable alternative to the carbon-based fuels (coal, natural gas, oil) that currently meet much of the world’s energy needs.
-\citeauthor{glassley_geothermal_2015} notes a succinct set of criteria for such an energy resource: i) self-replenishment, ii) adequate abundance to meet energy demands, iii) low- to no-greenhouse gas emissions, and iv) cost competitiveness compared to accessible alternatives (\citeyear[p.\ 7]{glassley_geothermal_2015}). The first criterion precisely characterizes renewable sources of energy like solar, gravitational, and geothermal. Solar energy includes both direct (sunlight) and indirect (wind, waves, water cycle) resources \citep{hohmeyer_ipcc_2008}. Gravitational energy drives the tides and supports energy-storage solutions like pumped-storage hydropower \citep{eere_pumped-storage_2021,hohmeyer_ipcc_2008}. And geothermal energy is primarily derived from the natural decay of radioactive isotopes within the Earth \citep{hohmeyer_ipcc_2008}. Table \ref{tab:renewableflux} specifically addresses criterion ii; the annual abundances of most renewable sources exceed energy demand, with geothermal scaling several orders of magnitude greater in annual flux/demand than other options \citep{hohmeyer_ipcc_2008}. Geothermal also meets the third criterion by providing a no-carbon source of energy that could support net zero aspirations when used in place of fossil fuels. The fourth criterion is less clear-cut. Geothermal costs depend strictly on use case, but as noted in Section \ref{ch1:trends}, LCOE analysis currently ranks geothermal below wind and solar in the list of renewable options \citep{lazard_lazards_2020}. Does this make geothermal non-viable as an alternative? Perhaps no, as geothermal comes with several unique opportunities and benefits.
+Several factors must be met for an energy source to be considered a viable and sustainable alternative to the carbon-based fuels (coal, natural gas, oil) that currently meet much of the world’s energy needs. \citeauthor{glassley_geothermal_2015} outlines a succinct set of criteria for such an energy resource: i) self-replenishment, ii) adequate abundance to meet energy demands, iii) low- to no-greenhouse gas emissions, and iv) cost competitiveness compared to accessible alternatives (\citeyear[p.\ 7]{glassley_geothermal_2015}). The first criterion precisely characterizes renewable sources of energy like solar, gravitational, and geothermal. Solar energy includes both direct (sunlight) and indirect (wind, waves, water cycle) resources \citep{hohmeyer_ipcc_2008}. Gravitational energy drives the tides and supports energy-storage solutions like pumped-storage hydropower \citep{eere_pumped-storage_2021,hohmeyer_ipcc_2008}. And geothermal energy is primarily derived from the natural decay of radioactive isotopes within the Earth \citep{hohmeyer_ipcc_2008}. Table \ref{tab:renewableflux} specifically addresses criterion ii; the annual abundances of most renewable sources exceed energy demand, with geothermal scaling several orders of magnitude greater in annual flux/demand than other options \citep{hohmeyer_ipcc_2008}. Geothermal also meets the third criterion by providing a no-carbon source of energy that could support net zero aspirations when used in place of fossil fuels. The fourth criterion is less clear-cut. Geothermal costs depend strictly on use case, but as noted in Section \ref{ch1:trends}, LCOE analysis currently ranks geothermal below wind and solar in the list of renewable options \citep{lazard_lazards_2020}. Does this make geothermal non-viable as an alternative? Perhaps no, as geothermal comes with several unique opportunities and benefits.
 
 \begin{table}[h!]
 \centering
