--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -101,13 +101,14 @@ Geothermal potential may even when one or more of the fundamental elements liste
 EGS could help propel geothermal beyond niche hydrothermal environments to become a more significant contributor to electricity production in the United States. The sources of subsurface heat exist everywhere (see Section \ref{ch2:heatorig}), so accessing temperatures that could support power production fundamentally rely on drilling deep enough and creating the artificial conditions necessary for heat capture. \acrlong{lanl} (\acrshort{lanl}) validated the EGS approach in crystalline rock at Fenton Hill beginning in 1974 \citep{tester_future_2006}. Feasibility studies followed soon thereafter in Japan, Germany, the U.K., and France \citep{breede_systematic_2013}. Among the most notable EGS projects providing key lessons learned are The Geysers (U.S.), Soultz-sous-Forêts (France), and Cooper Basin (Australia). The Geysers stands out as the largest geothermal power-generating complex in the world, delivering $\approx1,000$ MW even after 60 years of steam production \citep{jelacic_evaluation_2008,williams_assessment_2008}. Although drilling issues and public concern over induced seismicity halted efforts \citep{larson_altarock_2009}, rock-stimulation experiments in the NW Geysers proved distinct reservoirs can be developed adjacent to active hydrothermal operations \citep{pan_establishment_2019}. The Soultz project commenced in 1987 with one injector and two producers drilled to 5 km depth, eventually supporting a 1.5 MW power plant built in 2007-2008 \citep[p.\ 463]{dipippo_geothermal_2012}. In addition to experimental lessons learned for drilling, hydrofracturing, chemical stimulation, scaling, and corrosion, Soultz today supports both power production and district heating \citep{durst_overview_2013}. Cooper Basin, the largest EGS demonstration project of its time, showed great promise after a 6-year proof-of-concept phase \citep{stephens_assessing_2010}. However, the project halted in 2015 after a previously-unrecognized intersecting fault zone derailed further progress, highlighting the importance of robust structural appraisal in assessing geothermal prospects \citep{holl_what_2015}. 
 
 As the fate of these projects might suggest, the long-standing promise of EGS has not yet been fully realized. However, several active projects supported by the \acrlong{nrel} (\acrshort{nrel}) and GTO (e.g., EDGE, EGS Collab, FORGE) are providing insights necessary to mature subsurface models, drilling technologies, and stimulation methods for more widespread EGS adoption \citep{hamm_geothermal_2021}. And recent technology advances and partnerships involving start-ups like Deep Earth Energy \citep{geoenergy_saskatchewan_2021}, Eavor Technologies \citep{ross_energy_2020}, Eden GeoTech \citep{daso_eden_2020}, and Fervo Energy \citep{moss_google_2021,shieber_geothermal_2021}, show there is a growing fervor to overcome technology roadblocks currently holding EGS back. Projections show the size of the prize with success in EGS. Assuming a maximum cut-off depth of 7 km and a minimum reservoir temperature of 150$^\circ$C, the EGS resource potential for electricity production in the continental United States might be at least 5,150 GW, with an additional $\approx1,500$ MW from Near Hydrothermal Field-EGS (\acrshort{nfegs}) \citep{augustine_geovision_2019}. To put this opportunity into context: the total utility-scale electricity generation capacity from \underline{all} sources in the United States was $\approx1,200$ GW in 2019, over 4$\times$ less in magnitude than predicted EGS potential \citep{eia_electric_2020}.
+\vfill
 
 \section{Geothermal Exploration}\label{ch2:geoexp}
 \subsection{Background}\label{ch2:expl_background}
 The identification of geothermal resources classically relied on surface expressions of hot fluids circulating at depth. Quite simply, if a bubbling hot spring or a geyser was present, you had a working geothermal system. Some of the first sites for geothermal power production, like Larderello and The Geysers, were (unsurprisingly) targeted because of their tell-tale surface characteristics \citep[p.\ 111]{glassley_geothermal_2015}. However, this prospecting method only applies to fully-functioning hydrothermal systems, and not all such systems have surface manifestations if fluids remain trapped beneath a subsurface impermeable seal. These hidden or “blind” geothermal resources require more sophisticated exploration methods to identify and assess accurately.
 
 \subsection{Regional Exploration}\label{ch2:regional_expl}
-Regional evaluation techniques historically depended on sparse borehole data to map the geothermal potential of the U.S.\ \citep{kehle_aapg_1970}. Successive efforts led to progressively more comprehensive collections of heat flow and bottom hole temperature (\acrshort{bht}) measurements \citep{blackwell_heat_1990, blackwell_temperature-at-depth_2011, muffler_assessment_1979, sorey_low-temperature_1983, wisian_heat_1999}, now widely-available with additional geothermal data through the DOE \acrlong{ngds} (\acrshort{ngds}) platform \citep{anderson_national_2013}. These efforts supported a better understanding of broad trends that tie directly to tectonic provinces in the United States. Subduction and transform plate boundaries in the West, combined with extension in the Basin and Range, make this area of the U.S.\ more susceptible to high heat flow, high geothermal gradients, and greater potential for hydrothermal system activity \citep{mariner_low-temperature_1983}. Passive margins on the Atlantic and Gulf of Mexico sides make those regions less likely to host significant hydrothermal systems, although surveys have identified sedimentary basins with elevated heat flow in the south (Louisiana-Arkansas), central (Iowa-Illinois, Nebraska-South Dakota), and eastern (Appalachians) parts of the country \citep{blackwell_geothermal_1995, sorey_low-temperature_1983}.
+Regional evaluation techniques historically depended on sparse borehole data to map the geothermal potential of the U.S.\ \citep{kehle_aapg_1970}. Successive efforts led to progressively more comprehensive collections of heat flow and bottom hole temperature (\acrshort{bht}) measurements \citep{blackwell_heat_1990, blackwell_temperature-at-depth_2011, muffler_assessment_1979, sorey_low-temperature_1983, wisian_heat_1999}, now widely-available with additional geothermal data through the DOE NGDS platform \citep{anderson_national_2013}. These efforts supported a better understanding of broad trends that tie directly to tectonic provinces in the United States. Subduction and transform plate boundaries to the West, combined with extension in the Basin and Range, make this area of the U.S.\ more susceptible to high heat flow, high geothermal gradients, and greater potential for hydrothermal activity \citep{mariner_low-temperature_1983}. Passive margins along the Atlantic and Gulf of Mexico sides of the country make those regions less likely to host significant hydrothermal systems, although surveys have identified sedimentary basins with elevated heat flow in the South (Louisiana-Arkansas), Central (Iowa-Illinois, Nebraska-South Dakota), and Eastern (Appalachians) United States \citep{blackwell_geothermal_1995, sorey_low-temperature_1983}.
 
 \subsection{Sub-regional Exploration}\label{ch2:sub_regional_expl}
 Continental maps provide a super-regional view of geothermal prospectivity, but further refinement is required to progress an exploration program. Specifically, the determination of regional plays and local prospects must come before deciding where and how to develop a geothermal field. Characterization activities can be decomposed into the evaluation of four earth subsystems: hydrologic, stratigraphic, structural, and thermal. The main types of surveys associated with each subsystem are listed in Table \ref{tab:survey_types} and discussed briefly in the following section. Note that survey methods typically provide information on multiple subsystems. The associated non-uniqueness of subsurface interpretations based on these surveys highlights the need to integrate multiple lines of evidence for exploration activities. 
@@ -284,7 +285,7 @@ On the other side of the spectrum is the Cost of Renewable Energy Spreadsheet To
 Several geothermal cost model options are widely-available and accessible from researchers and U.S.\ government sources. While they differ in target audience and capabilities, the models capture similar inputs and produce levelized cost estimates for electricity generation from hydrothermal and/or EGS reservoirs. Uncertainty is rarely accounted for in the models. Instead, the user parameterizes the resource and power generation scenario and typically receives a single cost estimate. Sensitivity testing or use of parameter ranges must be handled manually (except with SAM), and the models are incompatible with dynamic strategic decision-making over the lifetime of a field. The absence of these features defines an opportunity for a different modeling approach: one that accounts for uncertainty, allows for strategic flexibility, and has a familiar and customizable form as described in Chapter \ref{ch4:cm_prep}. 
 
 \section{Case Study: Southwestern New Mexico}\label{ch2:case_outline}
-The area of interest (AOI) for the geothermal exploration work in chapters \ref{ch3:expl_ml_prep} and \ref{ch5:expl_ml} is a 37,600 square mile region of Southwestern New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (Figure \ref{fig:phys-provinces}). This region marks the conjunction of four significant geologic provinces. The \acrlong{sbr} (\acrshort{sbr}) extends across the lower third of the AOI. To the east lies the \acrlong{rgr} (\acrshort{rgr}), traced today by the course of the Rio Grande river. The \acrlong{cp} (\acrshort{cp}) covers the north of the study area, and the central-west region is blanketed by the \acrlong{mdvf} (\acrshort{mdvf}).
+The area of interest (AOI) for the geothermal exploration work in chapters \ref{ch3:expl_ml_prep} and \ref{ch5:ml_results} is a 37,600 square mile region of Southwestern New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (Figure \ref{fig:phys-provinces}). This region marks the conjunction of four significant geologic provinces. The \acrlong{sbr} (\acrshort{sbr}) extends across the lower third of the AOI. To the east lies the \acrlong{rgr} (\acrshort{rgr}), traced today by the course of the Rio Grande river. The \acrlong{cp} (\acrshort{cp}) covers the north of the study area, and the central-west region is blanketed by the \acrlong{mdvf} (\acrshort{mdvf}).
 
 The following is an overview of each province, followed by an in-depth look of the only active commercial power plant in NM, Lightning Dock. Cost-modeling work in chapters \ref{ch4:cm_prep} and \ref{ch6:cm_results} reference Lightning Dock as the parent facility to a proposed EGS expansion project.
 
@@ -313,7 +314,7 @@ Present-day commercial geothermal activity in New Mexico is limited to a single 
 \begin{figure}%{R}{0.65\linewidth}
 \centering
 \includegraphics[width=.85\textwidth]{templates/images/Figure-Lightning_Dock_Location_composite.png}
-\caption[Lightning Dock location map]{Map location of the Lightning Dock power plant. Inset map shows the facility in relationship to the state of NM and study area of interest for Chapters \ref{ch3:expl_ml_prep} and \ref{ch5:expl_ml} of this thesis. Map created using Google Earth.}
+\caption[Lightning Dock location map]{Map location of the Lightning Dock power plant. Inset map shows the facility in relationship to the state of NM and study area of interest for Chapters \ref{ch3:expl_ml_prep} and \ref{ch5:ml_results} of this thesis. Map created using Google Earth.}
 \label{fig:lightning_dock_map}
 \end{figure}
 
@@ -321,10 +322,8 @@ The Lightning Dock facility is on the eastern side of the Animas Valley, which l
 
 Prior to the construction of Lightning Dock, \citet{schochet_development_2001} submitted a proposed development plan for a hybrid hydrothermal-EGS project to the DOE. Similar to the Lightning Dock design, hydrothermal fluids would be produced from shallow depths (<1 km). In addition, the $\approx$600 m thick Horquilla Limestone formation could be treated as an EGS reservoir to supplement the hydrothermal power production and serve as a proof of concept for commercial EGS \citep{schochet_development_2001}. The proposal provided a cost analysis for two possible power plant sizes using most-likely values for variables and a single deterministic estimate of total plant and field cost \citep[Table 3,][]{schochet_development_2001}. The proposal was never realized, but the concept of combining the Lightning Dock power plant with an EGS expansion is an intriguing modern-day extension of Schochet and Cunniff’s vision. However, such a project would come with many financial risks tied to operations, resource management, and external market factors. This thesis considers how that risk might be mitigated through cost-modeling that accounts for uncertainty in the model parameters and the potential for just-in-time strategic decision-making. Such an approach goes beyond the cost models described in Section \ref{ch2:cost_models} and the simple cost analysis performed by \citet{schochet_development_2001}, treating the project as a system with its own dynamics and emergent financial results.
 
-\section{Recap}
-
+\section{Recap}\label{ch2:recap}
 This chapter provided relevant background information and a literature review on the topics of geothermal energy, geothermal exploration, and geothermal cost-modeling.
-\\
 \\
 Key insights from this chapter include:
 \begin{enumerate}
@@ -336,6 +335,6 @@ Key insights from this chapter include:
     \item An opportunity exists to apply supervised and unsupervised machine learning methods to geothermal exploration. Existing approaches have under-explored the influence of uncertainties on model prediction and reliability.
     \item Geothermal power plant conversion types include high-temperature resource steam plants; moderate to high-temperature resource flash plants, and low to moderate-temperature resource binary cycle plants. 
     \item Existing geothermal economic models estimate costs for a specified resource and power plant scenario. An opportunity exists to combine management of variable uncertainties, dynamic decision-making, and deployment using an open and adaptable platform.
-    \item Southwestern New Mexico consists of four unique physiographic provinces that have been well-documented in the past. This is the chosen study area for testing geothermal exploration risk mitigation strategies in Chapters \ref{ch3:expl_ml_prep} and \ref{ch5:expl_ml}.
+    \item Southwestern New Mexico consists of four unique physiographic provinces that have been well-documented in the past. This is the chosen study area for testing geothermal exploration risk mitigation strategies in Chapters \ref{ch3:expl_ml_prep} and \ref{ch5:ml_results}.
     \item Lightning Dock, a USGS-designated KGRA and active hydrothermal power plant, lies within the Southwest New Mexico study area. This is the selected area for testing risk mitigation with cost models in Chapters \ref{ch4:cm_prep} and \ref{ch6:cm_results}.
 \end{enumerate}
