--- a/templates/chap6.tex
+++ b/templates/chap6.tex
@@ -192,7 +192,7 @@ The histogram for Redevelop \& Grow skews noticeably to the right with a long ta
 \label{fig:grow_case_cdf}
 \end{figure}
 
-Some caution should be taken in applying learnings from this model to a real-world geothermal project. Results here depend on a few important assumptions, including the willingness of a partner utility company to accept capacity increases above the market rate for electricity on any given year, the direct relationship between large price increases and electricity demand, and the overall monotonic increase in electricity prices over time. With regard to the latter, the price model used in this analysis includes a single step change and annual volatility (see Figure \ref{fig:elec_price_prob}), but other forecasts exist that depict negative year-on-year trends not modeled here \citep{murphy_electrification_2021}. As discussed in Section \ref{ch4:future_elec}, the interactions between different energy markets and dynamics of major events like future electrification are complex, worth considering, and beyond the scope of this thesis. 
+Some caution should be taken in applying learnings from this model to a real-world geothermal project. Results here depend on a few important assumptions, including the willingness of a partner utility company to accept capacity increases above the market rate for electricity on any given year, the direct relationship between large price increases and electricity demand, and the overall monotonic increase in electricity prices over time. With regard to the latter, the price model used in this analysis includes a single step change and annual volatility (see Figure \ref{fig:elec_price_prob}), but other forecasts exist that depict negative year-on-year trends not modeled here \citep{murphy_electrification_2021}. As discussed in Section \ref{ch4:electrification_uncertainty}, the interactions between different energy markets and dynamics of major events like future electrification are complex, worth considering, and beyond the scope of this thesis. 
 
 \subsection{Summary Statistics}
 \label{ch6:grow_stats}
@@ -308,10 +308,8 @@ Full Flexibility and Redevelop \& Grow target curves closely match each other ex
 \label{fig:sens_test_expansion}
 \end{figure}
 
-\section{Recap}
-
+\section{Recap}\label{ch6:recap}
 This chapter covered the execution of cost models described in Chapter \ref{ch4:cm_prep}. Results for a deterministic model and four (4) probabilistic models illustrate how incorporating uncertainties and decision rules into a modeling approach can provide important insights into potential project profit and loss. By comparing summary metrics and target curves, this methodology allows a decision-maker to test strategies for mitigating the risk of an unprofitable EGS expansion to an existing power plant.
-\\
 \\
 Key insights from cost modeling include:
 \begin{enumerate}
