--- a/templates/main.tex
+++ b/templates/main.tex
@@ -19,8 +19,8 @@
 %%  If you want your thesis copyright to you instead of MIT, use the
 %%  ``vi'' option, as above.
 %%
-\documentclass[%draft,
-12pt,vi,twoside,leftblank]{mitthesis}
+\documentclass[%draft,upcase,
+vi,12pt,twoside,leftblank]{mitthesis}
 %%
 %% If you want blank pages before new chapters to be labelled ``This
 %% Page Intentionally Left Blank'', use the ``leftblank'' option, as
@@ -159,5 +159,6 @@
 \appendix
 \include{appa}
 \include{appb}
+\addcontentsline{toc}{chapter}{References}
 \include{biblio}
 \end{document}
