--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -26,13 +26,13 @@
 \newacronym{ieo}{IEO}{International Energy Outlook}
 \newacronym{kde}{KDE}{Kernel Density Estimation}
 \newacronym{kgra}{KGRA}{Known Geothermal Resource Area}
-\newacronym{kwh}{kW$\cdot$h}{Kilowatt-Hour}
+%\newacronym{kwh}{kW$\cdot$h}{Kilowatt-Hour}
 \newacronym{lanl}{LANL}{Los Alamos National Laboratory}
 \newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
 \newacronym{lr}{LR}{Logistic Regression}
 \newacronym{ma}{Ma}{Million Years Ago}
 \newacronym{mdvf}{MDVF}{Mogollon-Datil Volcanic Field}
-\newacronym{mwh}{MW$\cdot$h}{Megawatt-Hour}
+%\newacronym{mwh}{MW$\cdot$h}{Megawatt-Hour}
 \newacronym{nan}{NaN}{Not a Number}
 \newacronym{nfegs}{NF-EGS}{Near Field EGS}
 \newacronym{ngds}{NGDS}{National Geothermal Data System}
@@ -49,6 +49,7 @@
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
 \newacronym{pnm}{PNM}{Public Service Company of New Mexico}
 \newacronym{ppa}{PPA}{Power Purchase Agreement}
+\newacronym{ppi}{PPI}{Producer Price Index}
 \newacronym{relu}{ReLU}{Rectified Linear Unit}
 \newacronym{rfe}{RFE}{Recursive Feature Elimination}
 \newacronym{rgr}{RGR}{Rio Grande Rift}
