--- a/templates/chap8.tex
+++ b/templates/chap8.tex
@@ -1,6 +1,4 @@
-\chapter{Conclusions}
-\label{ch8:conclusions}
-
+\chapter{Conclusions}\label{ch8:conclusions}
 As the transition toward lower-carbon energy solutions continues to progress, geothermal uniquely offers a zero-emissions, continuous source that can fulfill the baseload needs of energy consumers. A geothermal field lifecycle closely follows that of a hydrocarbon field, from exploration and appraisal, through field development, to production and eventual decommissioning. The expertise with subsurface data, reservoir modeling, complex drilling, and field management skills valued in oil \& gas are similarly of great value to the geothermal industry. However, geothermal without EGS only has limited reach, and EGS comes with high risk. Without clear risk-mitigation strategies, oil \& gas will likely discount or delay adding geothermal to their energy portfolios despite the clear synergies between the two domains.
 
 Play fairway analysis, a common tool in the oil \& gas industry, has gained traction for reducing risks associated with geothermal exploration. However, PFA requires integration of disparate data sets to define chance of success for geothermal risk elements. This process lacks standardization and requires judgment calls from subject matter experts. Machine learning offers data-driven forecasts that are both quantitative and repeatable, and results from this work shows great promise in the predictive ability of several varieties of machine learning models. Perhaps more importantly, uncertainty characterization delivers invaluable information on where the data should be trusted, where predictive capacity of individual models varies, and where multiple models agree. Furthermore, machine learning models determine which data sets provide the most discriminatory value, which can steer exploration spend on additional data acquisition activities. Collectively, use of machine learning for play-risking or prospecting reduces the risk of making poor decisions on unreliable favorability maps, allocating budget on low-impact data sets, or missing important signals within the data that make the difference between a productive or an uneconomic geothermal well. And by relying on available data up-front to build these models, machine learning-based risk-mitigation comes with quick results at low cost.
