--- a/templates/chap9.tex
+++ b/templates/chap9.tex
@@ -3,13 +3,12 @@
 
 In this chapter, directions of further inquiry are suggested as both extensions of methods already reviewed and new avenues not yet explored by the author. The topic of geothermal energy is a rich one with many great opportunities for research.
 
-\section{Machine Learning Applications}
-\label{ch9:future_work_ml}
+\section{Machine Learning Applications}\label{ch9:future_work_ml}
 
 This thesis primarily focused on supervised classification models in its survey of machine learning methods for geothermal exploration. Maintaining a limited scope in modeling -- as well as for data gathering and preparation --- was intentional, but doing so set aside a number of topics worthy of follow-up analysis:
 
 \begin{itemize}
-    \item Machine learning methods in Chapter \ref{ch5:expl_ml} framed the prediction problem as a classification with four distinct labels for assignment (see Section \ref{ch3:gradient_classes}). Although convenient, this choice is problematic for continuous response variables like geothermal gradient. Classifiers treated each gradient class as independent, with no inherent ordered relationship. This assumption is of course false. Binning continuous variables makes sense when training data is sparse, but care must be taken for cases near the bounds between those bins. Further research on applying regression methods would help answer whether similar machine learning tools can perform well at predicting those edge case gradients where even the best classifiers (XGBoost, ANN) appeared to have difficulty.
+    \item Machine learning methods in Chapter \ref{ch5:ml_results} framed the prediction problem as a classification with four distinct labels for assignment (see Section \ref{ch3:gradient_classes}). Although convenient, this choice is problematic for continuous response variables like geothermal gradient. Classifiers treated each gradient class as independent, with no inherent ordered relationship. This assumption is of course false. Binning continuous variables makes sense when training data is sparse, but care must be taken for cases near the bounds between those bins. Further research on applying regression methods would help answer whether similar machine learning tools can perform well at predicting those edge case gradients where even the best classifiers (XGBoost, ANN) appeared to have difficulty.
     \item Choosing to use point data extracted from geothermal feature maps as input to machine learning models (see Section \ref{ch3:fishnet}) was expedient, but it also ignored the spatial correlation inherent to geologic data. The presence of features like faults or volcanic dikes at one location naturally raises the probability of finding the same at a nearby location. This kind of spatial relationship might be better preserved using convolutional neural networks or more complex network architectures that go beyond the fully-connected ANN described in Section \ref{ch5:ann_structure}.
     \item Management of data sparsity is a common issue in exploration. Here, the original data set was augmented by creating neighboring pseudo-wells (Section \ref{ch3:augmentation}) in a crude but effective approach to expanding the training data set. Data augmentation using more elegant and advanced methods would be a worthwhile topic of study for defining standards and recommendations to guide future geothermal data engineers.
     \item Autoencoders, Principle Component Analysis, and Non-negative Matrix Factorization are all effective tools for dimensionality reduction. Evaluating these and other methods can help bridge the gap between the supervised studies in this thesis and unsupervised efforts described in recent literature \citep{smith_characterizing_2021, pepin_new_2018}. Of particular interest might be consolidating many features associated with the same geothermal risk element into “super features” before applying tree-based ensemble methods or neural networks for classification.
@@ -17,10 +16,9 @@ This thesis primarily focused on supervised classification models in its survey 
     \item The topic of ensemble models was raised in this thesis but not rigorously pursued. Ensemble models apply a model-of-models paradigm to machine learning and show success in other applications \citep[e.g.,][]{wilson_machine_2020}. They naturally tie to Play Fairway Analysis where final favorability maps represent combinatory insights from individual risk element maps (see Section \ref{ch2:pfa}). An ensemble model approach could streamline creation of a final geothermal favorability map product while also preserving the prediction of specific risk components.
 \end{itemize}
 
-\section{Cost Modeling}
-\label{ch9:future_work_cm}
-
+\section{Cost Modeling}\label{ch9:future_work_cm}
 Although a number of economic models for geothermal power production already exist with varying degrees of maturity (see Section \ref{ch2:cost_models}), the contribution of this thesis to incorporating uncertainty and flexibility into cost models merely scratches the surface on what can still be done.
+
 \begin{itemize}
     \item Using well-known, popular platforms like Microsoft Excel greatly lessens the burden around deployment and adoption of new tools. However, spreadsheets come with limitations, some of which impacted the capabilities of the cost model defined in Section \ref{ch4:cm_concept}. Most significantly, the individual power plant modules and injector-producer well couplets were difficult to track and manage as their count dynamically changed throughout the lifespan of a field. One suggested improvement is to expand the existing model with more complex code that treats the modules and wells as objects, each with individually-tracked attributes like age, efficiencies, decline rates, and maintenance records. Uncertainty definitions, decision rules, and overall user experience can remain Excel-based, but functionality enhancements via an Excel plug-in or VBA code could overcome calculation limitations.
     \item Electricity pricing forecasts and Power Purchase Agreements (PPAs) likely require a more nuanced treatment than conducted in this thesis. Additional research into the best representation of wholesale electricity price changes, including reversing trends, would be a good first step. But perhaps more fundamentally, the relationship between price changes and the likelihood and scope of a PPA update with utility partners must be characterized and modeled.
@@ -29,8 +27,7 @@ Although a number of economic models for geothermal power production already exi
     \item Other opportunities for enhancing the geothermal cost model include: split pricing for electricity sales in addition to the original PPA with a utility, identifying and capturing efficiencies (e.g. lower fluid costs) from the expansion nature of the plant being modeled, incorporating local sales to nearby businesses or towns as separate revenue streams, and investigating how hybrid power (paired solar, wind) and storage (battery) project options influence the bottom line.
 \end{itemize}
 
-\section{Related Research Topics}
-\label{ch9:future_work_related}
+\section{Related Research Topics}\label{ch9:future_work_related}
 
 \begin{itemize}
     \item The original scope of this thesis included a section on evaluating existing and future drilling technologies. One possible roadmap for this research effort follows a systems approach. System architectural analyses of innovative techniques like millimeter-wave drilling \citep{woskov_millimeter-wave_2017} or spallation drilling \cite{augustine_hydrothermal_2009} could be compared to expected improvements to traditional rotary drilling \citep{lowry_geovision_2017}. Feedback from geothermal stakeholders would calibrate the benefit side of a cost-benefit analysis that includes constructing a tradespace to select preferred drilling architectures. As an added bonus, detailed cost estimates derived in the process could help reduce drilling cost uncertainty for geothermal cost models.
