--- a/templates/cover.tex
+++ b/templates/cover.tex
@@ -49,7 +49,7 @@
 % layout of your title page with your thesis advisor and/or the MIT 
 % Libraries before printing your final copy.
 %\title{Machine Learning and Cost Analysis for Risk Management in Geothermal Exploration and Production}
-\title{Exploration and Production Risk Mitigation for Geothermal Energy Adoption in the Energy Transition}
+\title{Exploration and Production Risk Mitigation for Geothermal Adoption in the Energy Transition}
 
 \author{Robert Chadwick Holmes}
 % If you wish to list your previous degrees on the cover page, use the 
@@ -58,7 +58,11 @@
 % You can use the \\ command to list multiple previous degrees
 %       \prevdegrees{B.S., University of California (1978) \\
 %                    S.M., Massachusetts Institute of Technology (1981)}
-\department{System Design and Management Program}
+\prevdegrees{B.S., Duke University (2000) \\
+            M.A., Columbia University (2004) \\
+            M.Ph., Columbia University (2006) \\
+            Ph.D., Columbia University (2009)}
+\department{System Design \& Management Program}
 
 % If the thesis is for two degrees simultaneously, list them both
 % separated by \and like this:
@@ -136,7 +140,7 @@ First and foremost, I want to thank my advisor, Aim\'e Fournier for his good hum
 
 I wish to thank the System Design \& Management program for an intense and incredible educational experience. Remote learning is nothing new to the program, and it was obvious from the quality of instruction they provided. Special thanks to my thesis reader and instructor, Bryan Moser, whose passion for learning and teaching is contagious. Bryan once commented that ``research is a lifestyle,” which rang true in his lectures for the SDM foundations courses, his agent-based modeling course, his Global Teamwork Lab meetings, his IEEE World Forum session, and basically any other time I saw him in action. Thanks also to Joan Rubin for leading the program and supporting each of us throughout the year. On a personal level, Joan kept an open door to communication by email, by phone, and eventually a handful of in-person meetings in support of my thesis journey.
 
-A separate and heartfelt thank you goes to Elizabeth Baker for taking the giant leap from being my teaching assistant in a glass of eighty-some students to becoming a very dear friend. Our time spent both online and in-person together made the highs and lows of thesis writing so worth it.
+A separate and heartfelt thank you goes to Elizabeth Baker for taking the giant leap from being my teaching assistant in a class of eighty-some students to becoming a very dear friend. Our time spent both online and in-person together made the highs and lows of thesis writing so worth it.
 
 Thanks also to the MIT Energy Initiative for welcoming me among your ranks. Thanks especially to Diane Rigos for the regular check-ins, kind offers of help, and a couple of in-person meals earlier this summer that helped bring the Chevron students together for brief but memorable moments in time.
 
@@ -144,7 +148,7 @@ The Earth Resources Lab was one of my first connections to MIT thanks to their b
 
 I wish also to thank my company sponsor, Chevron, for taking a chance on me. I specifically want to thank those who believed in my potential and supported my year-long absence to pursue this degree: Sebastien Bombarde, John Moore, and Janet Yun for being my champions; Mason Edwards, Kenn Ehman, Kellen Gunderson, Ash Harris, Fabien Laugier, Rhonda Welch, and Khryste Wright for keeping up with me during the year away; Brendan Horton for being my Digital Scholar mentor, and so many others in the greater Chevron community. On the program side, special thanks go to Shana Bolen and Margery Connor for a year of conversations, encouragement, and a lot of behind-the-scenes efforts that I may not have been fully aware of but certainly appreciate very much.
 
-Being a graduate student at MIT would be daunting in a normal year, but with a pandemic raging and real-life connections to faculty, staff, and fellow students reduced to a laptop screen and webcam, I have the 15 other Chevron scholars to thank for making the year a truly positive and life-changing experience. I feel so honored to have met such a diverse and wonderful group, and I look forward to many years of friendship and collaboration to come: Robert Andrais, Louis Catalan, Gloria Bahl Chambi, Christian Dowell, Matthew Hernandez, Matthew Kieke, Hemant Kumar, Alessandro Lucioli, Elias Machado, Monthep Parimontonsakul, Allison Polly, Kelsey Prestidge, Bagdat Toleubay, John Ward, and Surge Yemets.
+Being a graduate student at MIT would be daunting in a normal year, but with a pandemic raging and real-life connections to faculty, staff, and fellow students reduced to a laptop screen and webcam, I have the 15 other Chevron scholars to thank for making the year a truly positive and life-changing experience. I feel so honored to have met such a diverse and wonderful group, and I look forward to many years of friendship and collaboration to come: Robert Andrais, Louis Catalan, Gloria Bahl Chambi, Christian Dowell, Matthew Hernandez, Matthew Kieke, Hemant Kumar, Alessandro Lucioli, Elias Machado, Monthep Parimontonsakul, Allison Polly, Kelsey Prestidge, Bagdat Toleubay, John Ward, and my thesis buddy, Surge Yemets.
 
 Last but not least, thank you to my wonderful husband of nearly 8 years, Hans, for putting up with my absence for a full 12 months. You bravely held down the fort on your own, caring for two senior dachshunds and a puppy while balancing a full-time job, commitments to the community, extreme Texas heat, and even the winter storm blackouts that make a cameo in Chapter 1. I dedicate this thesis to you in honor of the impact it had on your life as well as my own.
 
